[package]
name = "ahh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
colored = "2.1.0"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "blocking", "rustls-tls"] }
ollama-rs = "0.1.9"
# https://github.com/ad4mx/spinoff
spinoff = "0.8.0"
# https://github.com/dirs-dev/directories-rs
directories = "5.0"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# markdown parser
bat = "0.24.0"

# https://github.com/pyrossh/rust-embed
rust-embed="8.4.0"
# https://github.com/mehcode/config-rs
config = "0.14.0"

# for pipeing value
clap-stdin = "0.5.1"

# For testing
predicates = "3.1.0"
assert_cmd = "2.0.14"

# cargo install --path .
# cargo watch test